--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "moment": "^2.22.2",
     "onsenui": "^2.10.4",
     "register-service-worker": "^1.0.0",
